Top 3 pagina afgemaakt. CSS aangepast. 3 Images toegevoegd.

--- a/index.html
+++ b/index.html
@@ -9,29 +9,27 @@
 </head>
 
 
-<body>
-<div class="grid-oefening-0">      
-    <nav class="nav">
-        <a href="grid-oefening-1.html">Oefening 1</a>
-        <a href="grid-oefening-2.html">Oefening 2</a>
-        <a href="grid-oefening-3.html">Oefening 3</a>
-        <a href="grid-oefening-4.html">Oefening 4</a>
-        <a href="grid-oefening-5.html">Oefening 5</a>
-        <a href="grid-oefening-6.html">Oefening 6</a>
-        <a href="grid-oefening-7.html">Oefening 7</a>
-        <a href="grid-oefening-8.html">Oefening 8</a>
-        <a href="grid-oefening-9.html">Oefening 9</a>
-    </nav>
+<body>    
+
+<div class="grid-oefening-10"> 
+    <h1 class="pagetitle"> Welkom op mijn Website!</h1>
+    <div class="menuknopjes">
+        <a class="menu" href="grid-oefening-1.html">Oefening 1</a>
+        <a class="menu" href="grid-oefening-2.html">Oefening 2</a>
+        <a class="menu" href="grid-oefening-3.html">Oefening 3</a>
+        <a class="menu" href="grid-oefening-4.html">Oefening 4</a>
+        <a class="menu" href="grid-oefening-5.html">Oefening 5</a>
+        <a class="menu" href="grid-oefening-6.html">Oefening 6</a>
+        <a class="menu" href="grid-oefening-7.html">Oefening 7</a>
+        <a class="menu" href="grid-oefening-8.html">Oefening 8</a>
+        <a class="menu" href="grid-oefening-9.html">Oefening 9</a>
+        <a class="menu" href="top-3-websites.html">Top 3 Websites</a>
+    </div> 
+</div> 
 
 
 
-<article class="storyleft"> </article>
-   
 
-<article class="featured article1"></article>
-<article class="featured article2"></article>
-<article class="featured article3"></article>
-<article class="featured article4"></article>
 
 </div>
 </body>
